--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -1,6 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent">
+
+
+    <LinearLayout
+        android:id="@+id/save_message_layout"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <TextView
+            android:id="@+id/messages_add_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="Add a Text Message"
+            android:textAppearance="@style/myDetailTitleStyle" />
+
+        <EditText
+            android:id="@+id/messageText_editText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:ems="10"
+            android:hint="Hi, I am home."
+            android:inputType="textShortMessage|textLongMessage"
+            android:lines="5"
+            android:maxLength="160"
+            android:minLines="2" />
+
+
+        <Button
+            android:id="@+id/save_text_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right|end"
+            android:layout_margin="8dp"
+            android:background="@drawable/rounded_button"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="onSaveContactClick"
+            android:padding="8dp"
+            android:text="Save Text"
+            android:textAppearance="@style/myButtonStyleSmall"
+            app:srcCompat="@android:drawable/ic_menu_save" />
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:id="@+id/message_list_layout"
+        android:layout_width="match_parent"
+        android:layout_height="217dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/save_message_layout">
+
+        <TextView
+            android:id="@+id/messages_label"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="8dp"
+            android:text="My Text Messages"
+            android:textAppearance="@style/myDetailTitleStyle" />
+
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/texts_list_recycler_view"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top"
+            android:layout_margin="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/save_message_layout"
+            tools:layout_editor_absoluteX="8dp" />
+
+    </LinearLayout>
+
+
 
 </android.support.constraint.ConstraintLayout>
