--- a/app/src/main/res/layout/new_contact.xml
+++ b/app/src/main/res/layout/new_contact.xml
@@ -29,29 +29,31 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal">
 
-    <Button
-        android:layout_width="0dp"
-        android:layout_weight="1"
-        android:layout_margin="8dp"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical|end"
-        android:background="@drawable/rounded_button"
-        android:clickable="true"
-        android:focusable="true"
-        android:text="@string/browse_my_contacts"
-        android:onClick="onAddFromContactsClicked"/>
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical|end"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
+            android:background="@drawable/rounded_button"
+            android:clickable="true"
+            android:focusable="true"
+            android:onClick="onAddFromContactsClicked"
+            android:text="@string/browse_my_contacts"
+            android:textAppearance="@style/myButtonStyleSmall" />
 
         <Button
             android:id="@+id/save_contact_button"
             android:layout_width="0dp"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:onClick="onSaveContactClick"
             android:layout_height="wrap_content"
-            android:text="@string/save_my_stalker"
+            android:layout_margin="8dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_button"
             android:clickable="true"
-            app:srcCompat="@android:drawable/ic_menu_save"
-            android:focusable="true" />
+            android:focusable="true"
+            android:onClick="onSaveContactClick"
+            android:text="@string/save_my_stalker"
+            android:textAppearance="@style/myButtonStyleSmall"
+            app:srcCompat="@android:drawable/ic_menu_save" />
 </LinearLayout>
 </LinearLayout>
