--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,15 +13,22 @@
 
 
     <style name="myDetailTitleStyle" parent="TextAppearance.AppCompat.Title">
-        <item name="android:textColor">@color/colorAccent</item>
+        <item name="android:textColor">@color/colorPrimaryDark</item>
         <item name="android:textStyle">bold</item>
-        <item name="android:textSize">16sp</item>
+        <item name="android:textSize">24sp</item>
     </style>
 
     <style name="myButtonStyle" parent="TextAppearance.AppCompat.Button">
         <item name="android:textColor">@color/text_color_primary</item>
         <item name="android:textStyle">bold</item>
         <item name="android:textSize">24sp</item>
+        <item name="android:layout_gravity">center_horizontal</item>
+    </style>
+
+    <style name="myButtonStyleSmall" parent="TextAppearance.AppCompat.Button">
+        <item name="android:textColor">@color/text_color_primary</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:layout_gravity">center_horizontal</item>
     </style>
 
