--- a/app/src/main/res/layout/message.xml
+++ b/app/src/main/res/layout/message.xml
@@ -26,7 +26,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="Add a Text Message"
+            android:text="@string/add_a_text_message"
             android:textAppearance="@style/myDetailTitleStyle" />
 
         <EditText
@@ -34,25 +34,26 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:ems="10"
-            android:hint="Hi, I am home."
+            android:hint="@string/hi_i_am_home"
             android:inputType="textShortMessage|textLongMessage"
             android:lines="5"
             android:maxLength="160"
-            android:minLines="2" />
+            android:minLines="2"
+            android:autofillHints="Insert your message." />
 
 
         <Button
             android:id="@+id/save_text_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|end"
+            android:layout_gravity="end"
             android:layout_margin="8dp"
             android:background="@drawable/rounded_button"
             android:clickable="true"
             android:focusable="true"
             android:onClick="onSaveContactClick"
             android:padding="8dp"
-            android:text="Save Text"
+            android:text="@string/save_text"
             android:textAppearance="@style/myButtonStyleSmall"
             app:srcCompat="@android:drawable/ic_menu_save" />
     </LinearLayout>
@@ -78,7 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="8dp"
-            android:text="My Text Messages"
+            android:text="@string/my_text_messages"
             android:textAppearance="@style/myDetailTitleStyle" />
 
         <android.support.v7.widget.RecyclerView
